tests/error/type_match/base_case_reference_const_propagation.bz
// error: unable to match value of type 'mut *mut int32' to '&mut *int32'
// note: mismatched mutability of types 'mut int32' and 'int32'
function test()
{
	mut i = 0;
	mut pi: *mut int32 = &i;
	let _: &mut *int32 = pi;
}
